[package]
name = "rust-blueprint"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust REST API framework (Blueprint equivalent)"

[dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "mysql",
    "postgres",
    "sqlite",
    "any",
    "chrono",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Memory allocator
mimalloc = { version = "0.1", default-features = false }

# Authentication
jsonwebtoken = "9"

# Configuration
dotenv = "0.15"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Concurrent data structures
dashmap = "6"

# High-performance cache
moka = { version = "0.12", features = ["future"] }

# Fast numeric formatting (integer + float)
itoa = "1"
ryu = "1"

# Error handling
thiserror = "2"

# Logging
log = "0.4"
env_logger = "0.11"

# System info
num_cpus = "1"

# Redis client (optional L2 cache)
redis = { version = "0.27", features = ["tokio-comp"] }

# Hashing for cache keys
sha2 = "0.10"

# Actix service traits for middleware
actix-service = "2"
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
